--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -18,11 +18,11 @@ templateClass: tmpl-post
 {% block article %}
 {{ content | safe }}
 
-<h1>🙏🙏🙏</h1>
+<h2>🫡🫡🫡</h2>
 <p>
-  Since you've made it this far, <a href="{{ shareUrl | safe }}" on-click="share">sharing</a> this article on your favorite social media network 
-  would be highly appreciated 💖! For feedback, please 
-  <a href="https://twitter.com/{{ metadata.author.twitterHandle }}" target="_blank" rel="noopener">ping me on Twitter.</a>
+  Since you've made it this far...
+  Why not
+  <a href="https://www.linkedin.com/in/nancy-zhang-973a7b301/{{ metadata.author.twitterHandle }}" target="_blank" rel="noopener">connect with me on LinkedIn?</a>
 </p>
 
 <share-widget>
