--- a/index.njk
+++ b/index.njk
@@ -1,5 +1,5 @@
 ---
-title: Title. Update me.
+title: Caught You! 🙌🏻 Nancy Being Silly Booooo 👻
 layout: layouts/home.njk
 description: Description. Update me.
 image: https://upload.wikimedia.org/wikipedia/en/a/a9/Example.jpg
@@ -7,9 +7,12 @@ date: Last Modified
 ---
 
 <p>
-  This is a demo website based on 
-  <a href="https://www.industrialempathy.com/posts/eleventy-high-performance-blog/">eleventy-high-performance-blog</a>.
+This is my personal blog site. 
+Doubt if anyone will read everything. 
+Quote from Pauri "one shows all his insecurities on court." 
+I do do that. And I do it here as well.
 </p>
+
 
 <div id="posts">
   <h2>Posts</h2>
