Added lock to clubbing post.

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -99,5 +99,7 @@
     </footer>
 
     <!-- Current page: {{ page.url | url }} -->
+    <!-- Post authentication script -->
+    <script src="{{ '/js/post-auth.js' | url }}"></script>
   </body>
 </html>
