--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -100,6 +100,6 @@
 
     <!-- Current page: {{ page.url | url }} -->
     <!-- Post authentication script -->
-    <script src="{{ '/js/post-auth.js' | url }}"></script>
+    <script src="{{ '/js/post-auth-v2.js' | url }}"></script>
   </body>
 </html>
