Added the nic posts and auth.

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -101,5 +101,6 @@
     <!-- Current page: {{ page.url | url }} -->
     <!-- Post authentication script -->
     <script src="{{ '/js/post-auth-v3.js' | url }}"></script>
+    <script src="{{ '/js/post-auth-nic.js' | url }}"></script>
   </body>
 </html>
