Add Cali ep5 post and some other edits

--- a/index.njk
+++ b/index.njk
@@ -7,9 +7,9 @@ date: Last Modified
 ---
 
 <p>
-This is my personal blog site. 
-Doubt if anyone will read everything. 
-Quote from Pauri "one shows all his insecurities on court." 
+This is my personal blog site.
+Doubt if anyone will read everything.
+Quote from my tennis coach "one shows all his insecurities on court."
 I do do that. And I do it here as well.
 </p>
 
