--- a/index.njk
+++ b/index.njk
@@ -1,7 +1,7 @@
 ---
 title: Caught You! 🙌🏻 Nancy Being Silly Booooo 👻
 layout: layouts/home.njk
-description: Description. Update me.
+description: Home page of this silly blog :)
 image: https://upload.wikimedia.org/wikipedia/en/a/a9/Example.jpg
 date: Last Modified
 ---
