--- a/archive.njk
+++ b/archive.njk
@@ -3,7 +3,11 @@ layout: layouts/home.njk
 permalink: /posts/
 ---
 
-<h1>Archive</h1>
+<h1>Everything So Far...</h1>
+<h2>Thank You For Being Here.</h2>
+
+<img src="{{ '/img/nz-bio2_0.jpg'| url }}" alt="Hehe">
+<br>
 
 {% set postslist = collections.posts %}
 {% include "postslist.njk" %}
