--- a/index.njk
+++ b/index.njk
@@ -8,14 +8,55 @@ date: Last Modified
 
 <p>
 This is my personal blog site.
-Doubt if anyone will read everything.
-Quote from my tennis coach "one shows all his insecurities on court."
-I do do that. And I do it here as well.
 </p>
-
+<p>
+Lots of silly stuff. But there's never too much silliness. Everybody is so serious. Why so serious??
+</p>
+<img src="{{ '/img/blog7.0/chandler_bing.webp'| url }}" alt="Bing">
 
 <div id="posts">
-  <h2>Posts</h2>
+  {# <h2>Most Recent Posts</h2>
   {% set postslist = collections.posts %}
-  {% include "postslist.njk" %}
+  {% include "postslist.njk" %} #}
+
+  <h2>Browse By Tags</h2>
+  <ul>
+  {% for tag in collections.tagList | reverse %}
+  <li>
+    {% set tagUrl %}/tags/{{ tag | slugify }}/{% endset %}
+    <a href="{{ tagUrl | url }}" class="post-tag">{{ tag }}</a>
+    - {{ tagDescription[tag] }}
+  </li>
+  {% endfor %}
+  </ul>
+
+  <h2>5 of My Favorite Posts</h2>
+  <ul>
+    <li><a href="{{ '/posts/spring2025finalweekpt3/' | url }}">Final Week Pt.3. Before I Leave.</a></li>
+    <li><a href="{{ '/posts/clubbingpackagept4/' | url }}">Clubbing Package Pt.4. Palm Trees, Mau P, Fisher, and A Frog (Intro)</a><div>// And the following one as well!</div></li>
+    <li><a href="{{ '/posts/senior@deisep6/' | url }}">Senior @ Deis. ep6. 什么样的人</a></li>
+    <li><a href="{{ '/posts/hotgrillep6/' | url }}">Hot Grill ep6. I Had a Conversation with Sally</a></li>
+    <li><a href="{{ '/posts/hotgrillep8/' | url }}">Hot Grill ep8. 酒国 - 读后感</a></li>
+  </ul>
+
+  <h2>5 Most Recent Posts</h2>
+  <ul>
+  {% for post in collections.posts | reverse | head(5) %}
+    <li>
+      <a href="{{ post.url | url }}">{% if post.data.title %}{{ post.data.title }}{% else %}<code>{{ post.url }}</code>{% endif %}</a>
+      <time  datetime="{{ post.date | htmlDateString }}">{{ post.date | readableDate }}</time>
+    </li>
+  {% endfor %}
+  </ul>
+
+  <h2>Click Here for Every Single Post I Have Ever Written</h2>
+  {% set postsUrl %}/posts/{{ posts | slugify }}/{% endset %}
+    <a href="{{ '/posts/' | url }}">Click Me!</a>
 </div>
+
+<h2>Can't Believe You Scrolled to the Bottom!</h2>
+<p>
+We listen we don't judge right?
+</p>
+<img src="{{ '/img/blog7.0/fisher_haha.webp'| url }}" alt="Hehe">
+
