Oops missing title

--- a/archive.njk
+++ b/archive.njk
@@ -1,9 +1,9 @@
 ---
 layout: layouts/home.njk
 permalink: /posts/
+title: Everything So Far...
 ---
 
-<h1>Everything So Far...</h1>
 <h2>Thank You For Being Here.</h2>
 
 <img src="{{ '/img/nz-bio2_0.jpg'| url }}" alt="Hehe">
